Stations done with json data files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/customers.json
+    - assets/stations.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
